Added java9/10 build profiles for surefire and compiler (#617)