@@ -252,22 +252,6 @@
         </pluginManagement>
 
         <plugins>
-            <!-- Core Java Plugins; alphabetical order -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>${project.java.version}</source>
-                    <target>${project.java.version}</target>
-                    <encoding>${project.build.sourceEncoding}</encoding>
-                    <compilerArgs>
-                        <compilerArg>-Xdiags:verbose</compilerArg>
-                        <compilerArg>-Xlint:all</compilerArg>
-                        <compilerArg>-Xlint:-processing</compilerArg>
-                        <!--<compilerArg>-Werror</compilerArg>-->
-                    </compilerArgs>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -449,8 +433,74 @@
                     </execution>
                 </executions>
             </plugin>
-
         </plugins>
     </build>
 
+    <profiles>
+        <profile>
+            <id>jdk8-build</id>
+            <activation>
+                <jdk>1.8</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <!-- Core Java Plugins; alphabetical order -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <configuration>
+                            <source>${project.java.version}</source>
+                            <target>${project.java.version}</target>
+                            <encoding>${project.build.sourceEncoding}</encoding>
+                            <compilerArgs>
+                                <compilerArg>-Xdiags:verbose</compilerArg>
+                                <compilerArg>-Xlint:all</compilerArg>
+                                <compilerArg>-Xlint:-processing</compilerArg>
+                                <!--<compilerArg>-Werror</compilerArg>-->
+                            </compilerArgs>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>above-jdk8-build</id>
+            <activation>
+                <jdk>[9,12)</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <!-- Core Java Plugins; alphabetical order -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <configuration>
+                            <source>${project.java.version}</source>
+                            <target>${project.java.version}</target>
+                            <encoding>${project.build.sourceEncoding}</encoding>
+                            <compilerArgs>
+                                <compilerArg>-Xdiags:verbose</compilerArg>
+                                <compilerArg>-Xlint:all</compilerArg>
+                                <compilerArg>-Xlint:-processing</compilerArg>
+                                <!--<compilerArg>-Werror</compilerArg>-->
+                                <arg>--add-modules</arg>
+                                <arg>java.xml.bind,java.activation</arg>
+                            </compilerArgs>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <argLine>--add-modules java.xml.bind,java.activation
+                                --add-opens java.base/java.lang=ALL-UNNAMED
+                                --add-exports=java.xml.bind/com.sun.xml.internal.bind=ALL-UNNAMED
+                                --add-exports=java.xml.bind/com.sun.xml.internal.bind.v2=ALL-UNNAMED
+                                --add-exports=java.xml.bind/com.sun.xml.internal.bind.v2.runtime.reflect=ALL-UNNAMED
+                            </argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
